2017-06-28  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-739

	* src/make_vector.{cc,h}, src/CMakeLists.txt:

	Removed make_vector implementation for same reason as MakeArray.

	* src/matpackI.{cc,h}:

	(Vector): Implement list initialization constructor and assignment
	operator for Vector.

	(Iterator1D, ConstIterator1d): Define iterator_traits to enable use
	with std::copy. Needed for list initialization assignment operator.

	* doc/uguide/matrix_vector.tex, doc/uguide/gridded_fields.tex:

	Update docs for changes of MakeArray and MakeVector.

	* src/absorption.cc, src/cloudbox.cc, src/gas_abs_lookup.cc,
	src/lin_alg.cc, src/m_abs.cc, src/m_abs_lookup.cc, src/m_cloudbox.cc,
	src/m_general.cc, src/m_montecarlo.cc, src/mc_antenna.cc,
	src/sensor.cc, src/test_cia.cc, src/test_interpolation.cc,
	src/test_linalg.cc, src/test_matpack.cc, src/tmatrix.cc:

	Removed make_array.h include.

	Replace MakeVector with list initialization.

2017-06-27  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-738

	* src/make_array.h:

	Removed. Not needed any longer since C++11 introduced list
	initialization from a braced-init-list.

	Some examples (first line old code, second line new code):

	ArrayOfIndex N; N=MakeArray<Index>(1, 1, 3, 3, 5);
	ArrayOfIndex N{1, 1, 3, 3, 5};

	complex_refr_index.set_grid(2, MakeArray<String>("real", "imaginary"));
	complex_refr_index.set_grid(2, {"real", "imaginary"});

	See also: http://en.cppreference.com/w/cpp/language/list_initialization

	* src/array.h: Add list initialization constructor.

	* src/abs_species_tags.h, src/absorption.h, src/agenda_record.{cc,h},
	src/agendas.cc, src/array.h, src/file.{cc,h}, src/jacobian.h,
	src/m_abs.cc, src/m_basic_types.cc, src/m_refraction.cc,
	src/m_sensor.cc, src/m_surface.cc, src/m_tmatrix.cc,
	src/make_auto_md_cc.cc, src/methods.{cc,h}, src/methods_aux.cc,
	src/partition_function_data.cc, src/species_data.cc,
	src/test_gridded_fields.cc, src/test_matpack.cc,