@@ -142,6 +142,14 @@ if (NOT NO_OEM)
   set (OEM_SUPPORT true)
 endif ()
 
+# Disable OEM support if compiling with AppleClang compiler, as it
+# currently fails compiling invlib
+if (NOT ENABLE_OEM AND CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
+  message(WARNING "OEM support disabled because of invlib incompatibility "
+                  "with Apple clang. Use -DENABLE_OEM=1 to force OEM.")
+  set (OEM_SUPPORT false)
+endif ()
+
 ########### Check MPI Support ############
 if (ENABLE_MPI) # User must enable MPI using -DENABLE_MPI=ON
   find_package(MPI)
